PIC-3624 fix returning soft deleted notes (#1160)
* PIC-3624 fix returning soft deleted notes

* PIC-3624 review comments

* PIC-3624 avoid using Optional as parameter